# nexus_singularity

./: .env  .gitignore  CLEAN  Cargo.toml  GEMINI.md  NEXUS_MANUAL.txt  action_handler.js  agent_exec.sh  agent_orchestrate.sh  agent_read.sh  agent_registry.json  agent_write.sh  audit.py  backend  binary_watcher.sh  birth_watcher.sh  boot_nexus.sh  broadcast_pulse.sh  build_link  build_safe.sh  cat_nexus_debug.sh  check-models.sh  check_gemma.sh  client_switch.sh  command_bridge.py  create_client.sh  decode_thought.py  deploy_sovereign.sh  generate_report.sh  git_push.sh  git_sync.sh  git_uplink.sh  health_check.sh  heartbeat.sh  hub.py  hud.py  hybrid_audit.sh  ignite.sh  ignite_agents.sh  ignite_fusion.sh  (+51 more)
.cargo/: .global-cache  config.toml
.svelte-kit/: ambient.d.ts  non-ambient.d.ts
.venv_debian/: pyvenv.cfg
inbox/: dash_ignition.md  final_sync.md  vocal_test.md  voice_cmd_1768486029.md  voice_cmd_1768512051.md  voice_cmd_1768512073.md
lib/: spawn_logic.py
nexus-core/: Cargo.toml  action_handler.rs  action_listener.rs  ai_engine.rs  archivist.rs  brain.rs  bridge.rs  forge_master.py  frequency.rs  gemma_engine.rs  heartbeat.zig  hud.rs  lazarus.rs  lib.rs  micro_agents.rs  monitor.rs  neural_translator.py  nexus_bridge.rs  nexus_ipc.rs  server.rs  signal_cleaner.py  swap_core.rs  swap_core.zig  swarm.rs  system_monitor.rs  terminal.rs  terminal_core.rs  vector.rs  web_bridge.rs  zircon_types.rs
nexus-terminal/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
nexus-terminal/src-tauri/src/: main.rs
nexus_lite/: Cargo.toml  index.html
nexus_lite/src/: main.rs
nexus_lite/workspace/: memory.json
nexus_memory/: LEDGER.md
nexus_os/: Cargo.toml  index.html
src/: App.svelte  action_handler.rs  agents.rs  arbiter.rs  auto.rs  billing.rs  brain.rs  bridge.rs  capability_monitor.rs  dashboard.rs  download.rs  frequency.rs  gemma_api.rs  gemma_engine.rs  ghost_trigger.py  heartbeat_beacon.rs  init_files.rs  interface.rs  key_loader.rs  logs_module.rs  main.rs  mission_log.txt  nexus_sh.rs  repo.rs  revenue_monitor.rs  sentinel_agent.py  signature_scanner.py  swap_core.zig  system_monitor.rs  terminal.rs  terminal_core.rs  vitals_module.rs  web_bridge.rs  whisper_encoder.py  zircon_shim.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
static/: index.html  index.html.bak  neural_goal.json
workspace/: agent.py  agent_devicebot.py  agent_orchestrate.sh  agent_researchbot.py  brain.rs  build_debian.sh  command_bridge.py  crash_log.json  deploy.sh  diagnostic.py  entropy.py  factory.py  fibonacci.py  file_listing.txt  filename  genesis.py  hello.txt  hello_bridge  hello_bridge.c  home.html  index.html  init_env.sh  level6.txt  master_boot.sh  memory.json  model_router.py  network_bridge.sh  nexus-mirror.sh  nexus-push.sh  nexus-remote.sh  nexus-status.sh  nexus-unlock.sh  nexus_ear.sh  nexus_ide"}  nexus_identity.txt  nexus_ignite.sh  nexus_profile.txt  nexus_setup.py  (+21 more)
(+124 files in other folders)
