[package]
name = "nexus_singularity"
version = "0.3.8"
edition = "2021"

[dependencies]
eframe = { version = "0.28", default-features = false, features = ["glow", "x11"] }
socket2 = "0.5"
# Web & API Kernel
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }

# Async Runtime (Critical for Pulse Ear)
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
async-stream = "0.3"

# Data & Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
base64 = "0.22"

# Networking & System
reqwest = { version = "0.12", features = ["json", "stream"] }
sysinfo = "0.30"
chrono = { version = "0.4", features = ["clock"] }
anyhow = "1.0"
notify = "8.2.0"

[profile.release]
opt-level = 3
debug = false
codegen-units = 1
lto = "thin"
incremental = false

[target.'cfg(target_env = "musl")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
