[package]
name = "nexus_singularity"
version = "0.3.9"
edition = "2021"
default-run = "nexus_sh"

[[bin]]
name = "nexus_sh"
path = "src/nexus_sh.rs"

[[bin]]
name = "nexus_bridge"
path = "src/nexus_bridge.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
once_cell = "1.18"
