[package]
name = "nexus_lite"
version = "0.5.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
async-stream = "0.3"
dotenvy = "0.15"
sysinfo = "0.30"
chrono = "0.4"
