[package]
name = "nexus-terminal"
version = "0.2.2"
edition = "2021"

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
portable-pty = "0.8"
tokio = { version = "1", features = ["full"] }
nexus-core = { workspace = true }

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }
